--- a/public/index.html
+++ b/public/index.html
@@ -19,7 +19,7 @@
 <body>
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Spa Office</a>
+        <a class="navbar-brand" href="#" id="home">Spa Office</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
             aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -35,35 +35,52 @@
 
     <main>
         <div class="container-fluid">
-            <div class="jumbotron">
-                <h1 class="display-4">Welcome to SPA Spa</h1>
-                <p class="lead">Here are SPA Spa, we are all about you. Come and enjoy many services, including massage, hair cuts, and skin care.</p>
+            <div class="jumbotron addBackground" id="jumbotron">
             </div>
+        </div>
+        <div class="container">
+            <h1 class="display-4 text-right">Welcome to SPA Spa</h1>
+            <p class="lead text-right">Here are SPA Spa, we are all about you. Come and enjoy many services, including
+                massages, hair cuts, and skin care.</p>
         </div>
         <div class="container">
             <div class="hidden" id="categoryContainer">
                 <h2>SPA Spa Service Selector</h2>
                 <div class="dropdown">
                     <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
-                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select your spa service</button>
+                        data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Select your spa
+                        service</button>
                     <div class="dropdown-menu" aria-labelledby="dropdownMenuButton" id="categoryList"></div>
                 </div>
             </div>
 
-            <div class="hidden" id="serviceContainer">
-                <h3 id="categoryName">&nbsp;</h3>
-                <ul id="serviceList"></ul>
-
-                <div class="hidden col-md-4" id="serviceCard">
+            <div class="card-deck">
+                <div class="hidden" id="servicesContainer">
+                    <div class="card" style="width: 18rem;">
+                        <div class="card-body">
+                            <h3 class="card-title" id="categoryName">&nbsp;</h3>
+                        </div>
+                        <ul class="list-group list-group-flush" id="serviceList">
+                        </ul>
+                    </div>
+                    <h3></h3>
+                    <ul id="serviceList"></ul>
+                </div>
+                <div class="hidden" id="serviceCard">
                     <div class="card" style="width: 18rem;">
                         <div class="card-body">
                             <h4 class="card-title" id="ServiceName">&nbsp;</h4>
-                            <p class="card-text" id="ServiceID">&nbsp;</p>
+                            <small class="card-text" id="ServiceID">&nbsp;</small>
+                            <p class="card-text" id="CategoryName">&nbsp;</p>
                             <p class="card-text" id="Description">&nbsp;</p>
                             <p class="card-text" id="Price">&nbsp;</p>
                             <p class="card-text" id="Minutes">&nbsp;</p>
-                            <small class="card-text" id="CategoryName">&nbsp;</small>
                         </div>
+                    </div>
+                </div>
+                <div class="hidden" id="serviceImage">
+                    <div class="card" style="width: 18rem;">
+                        <img class="card-img-top" alt="Spa Image">
                     </div>
                 </div>
             </div>
