adding pictures for each category, troubleshooting, and adding background

--- a/public/index.html
+++ b/public/index.html
@@ -20,8 +20,8 @@
     <!--nav bar-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="#" id="home">Spa Office</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02"
-            aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler"
+            aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
@@ -40,8 +40,7 @@
         </div>
         <div class="container">
             <h1 class="display-4 text-right">Welcome to SPA Spa</h1>
-            <p class="lead text-right">Here are SPA Spa, we are all about you. Come and enjoy many services, including
-                massages, hair cuts, and skin care.</p>
+            <p class="lead text-right">Here at SPA Spa, we are all about you. Come and enjoy many services, including massages, hair cuts, and skin care.</p>
         </div>
         <div class="container">
             <div class="hidden" id="categoryContainer">
@@ -63,8 +62,6 @@
                         <ul class="list-group list-group-flush" id="serviceList">
                         </ul>
                     </div>
-                    <h3></h3>
-                    <ul id="serviceList"></ul>
                 </div>
                 <div class="hidden" id="serviceCard">
                     <div class="card" style="width: 18rem;">
@@ -78,9 +75,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="hidden" id="serviceImage">
-                    <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" alt="Spa Image">
+                <div class="hidden" id="serviceImageCard">
+                    <div class="card" style="width: 18rem;" id="serviceImage">
                     </div>
                 </div>
             </div>
@@ -88,7 +84,10 @@
         </div>
     </main>
 
-
+    <hr>
+    <footer>
+        <p>SPA Spa is run by Michelle Harrop, who worked on this site while participating in a puppy cuddle treatment.</p>
+    </footer>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
