--- a/public/index.html
+++ b/public/index.html
@@ -40,14 +40,15 @@
             <div class="jumbotron addBackground" id="jumbotron">
             </div>
         </div>
+        <div class="container">
+            <!--Header-->
+            <header>
+                <h1 class="display-4 text-right">Welcome to SPA Spa</h1>
+                <p class="lead text-right">Here at SPA Spa, we are all about you. Come and enjoy many services,
+                    including massages, hair cuts, and skin care.</p>
+            </header>
 
-        <!--Header-->
-        <div class="container">
-            <h1 class="display-4 text-right">Welcome to SPA Spa</h1>
-            <p class="lead text-right">Here at SPA Spa, we are all about you. Come and enjoy many services, including massages, hair cuts, and skin care.</p>
-        </div>
-        <!--header and dropdown button-->
-        <div class="container">
+            <!--header and dropdown button-->
             <div class="hidden" id="categoryContainer">
                 <h2>SPA Spa Service Selector</h2>
                 <div class="dropdown">
@@ -91,10 +92,11 @@
         </div>
     </main>
 
-    <hr>
     <!--footer-->
     <footer>
-        <p>SPA Spa is run by Michelle Harrop, who worked on this site while participating in a puppy cuddle treatment.</p>
+        <hr>
+        <p>SPA Spa is run by Michelle Harrop, who worked on this site while participating in a puppy cuddle treatment.
+        </p>
     </footer>
 
     <!-- Optional JavaScript -->
